--- a/app/views/director_templates/details.html.erb
+++ b/app/views/director_templates/details.html.erb
@@ -48,7 +48,7 @@
       <td><%= a_movie.year %></td>
       <td><%= @the_director.name %></td>
       <td>
-        <a href="/movie/<%= a_movie.id %>">
+        <a href="/movies/<%= a_movie.id %>">
          Show details
         </a>
       </td>
